			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

09-Mar-2003
~~~~~~~~~~~
Don't mark widget documentation as translatable.
Make sure the tooltip for pinboard and panel icons is up-to-date (reported
by krjw).
Use pinboard backdrop colour for scaled and centred images (requested by
Marcelo Ramos).
Shade the backdrop style buttons when an external program is being used to
set the backdrop.
Updated Spanish translation (Marcelo Ramos).

08-Mar-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

07-Mar-2003
~~~~~~~~~~~
Use stock icons in pinboard and panel menus.
Updated Spanish translation (Marcelo Ramos).

03-Mar-2003
~~~~~~~~~~~
Use stock icons in menus, and fix some possible problems in the menu code
(Stephen Watson).

02-Mar-2003
~~~~~~~~~~~
Stop pinboard icons flickering when you move over them (Daniele Peri).
Use XSettings drag-and-drop threshold.

01-Mar-2003
~~~~~~~~~~~
Bugfix: Backdrop image could be redrawn in the wrong place (Stephen Watson).

27-Feb-2003 (Release 1.3.7)
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Allow an empty AppInfo translation so that a label can be translated without
changing the value.

25-Feb-2003
~~~~~~~~~~~
Updated Russian translation (Alexey Lubimov).

23-Feb-2003
~~~~~~~~~~~
When using the Rename and Link boxes, use the appropriate drag cursor
(suggested by Michael Adams).
Bugfix: A double-click which starts on one file and ends on another is now
	ignored (reported by Michael Adams).
Bugfix: Test for valid sort-type in SOAP call was reserved, so you couldn't set
	the sort type (reported by Damjan Bole).
Bugfix: Using a SOAP call to open a non-existant directory made the filer
	crash.
Bugfix: Drag-and-drop raising on the panel didn't quite work (Daniele Peri).

22-Feb-2003
~~~~~~~~~~~
Make Size toolbar icon only set the size. Use a second button to set automatic
mode.

13-Feb-2003
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).