@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+11-Mar-2003
+~~~~~~~~~~~
+Bugfix: Comments about a MIME type were loaded from the first file to contain
+	information about the type, not the first to contain a comment about
+	the type.
+
 09-Mar-2003
 ~~~~~~~~~~~
 Don't mark widget documentation as translatable.
